[package]
name = "donglora-mux"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Stephen Waits <steve@waits.net>"]
license = "MIT"
description = "DongLoRa USB Multiplexer — share one dongle with multiple applications"
repository = "https://github.com/donglora/mux-rs"
homepage = "https://github.com/donglora/mux-rs"
keywords = ["lora", "radio", "usb", "multiplexer"]
categories = ["hardware-support"]
exclude = [".jj/", "deny.toml", "justfile", "mise.toml", "rustfmt.toml"]

[dependencies]
donglora-client = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fd-lock = "4"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
